--- a/custom gamepad css example.css
+++ b/custom gamepad css example.css
@@ -273,6 +273,10 @@ the CSS inline. */
     margin-top: 5px;
     background-position-y: 52px;
 }
+/* NOTE: You NEED to set this to exactly half the height of what is listed 
+for '.controller.custom' so when your skin is activated via player selection
+parameters (e.g. http://mrmcpowned.com/gamepad?p=1) it will be correctly
+centered on screen. */
 .custom.half{
     margin-top: -279px;
 }
